chore: 移除 vue-router 组件以及相关代码

--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "nanoid": "^5.0.8",
     "pinia": "^2.2.6",
     "sql-formatter": "^15.4.6",
-    "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue": "^3.5.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
