--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vueuse/components": "^11.3.0",
     "@vueuse/core": "^11.3.0",
     "crypto-js": "^4.2.0",
+    "highlight.js": "^11.10.0",
     "lodash-es": "^4.17.21",
     "monaco-editor": "^0.52.0",
     "nanoid": "^5.0.8",
