--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@vueuse/components": "^11.3.0",
     "@vueuse/core": "^11.3.0",
+    "axios": "^1.7.9",
     "crypto-js": "^4.2.0",
     "highlight.js": "^11.10.0",
     "lodash-es": "^4.17.21",
