--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.10",
     "@vueuse/components": "^11.3.0",
     "@vueuse/core": "^11.3.0",
     "axios": "^1.7.9",
@@ -21,6 +22,7 @@
     "nanoid": "^5.0.8",
     "pinia": "^2.2.6",
     "sql-formatter": "^15.4.6",
+    "tailwindcss": "^4.0.10",
     "vue": "^3.5.12"
   },
   "devDependencies": {
